tests/checker/diagnostics/0574_functor_opaque_result_operator_mismatch_03.ml.infer.expected
File "0574_functor_opaque_result_operator_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0574_functor_opaque_result_operator_mismatch_03 is not a valid module name.

File "0574_functor_opaque_result_operator_mismatch_03.ml", line 22, characters 8-19:
22 | let _ = Out_gamma.y + 3
             ^^^^^^^^^^^
Error: The value Out_gamma.y has type Out_gamma.u = Make_gamma(Input_gamma).u
       but an expression was expected of type int
